@@ -4,6 +4,8 @@ Below is a complete listing of changes for each revision of HighLine.
 
 == 0.6.0
 
+* Added support for <tt>echo = "*"</tt> style settings.  User code can now
+  choose the echo character this way.
 * Improved "stty" state restoring code.
 
 == 0.5.0
